test/test_examples/syntactic_examples/syntax_error/error_statement_79.zig
// Syntax error: Missing condition right bracket

const ifj = @import("ifj24.zig");

pub fn main() void {
    var x: i32 = 32;
    const y : i32 = 89;

    if(y < x
    {
        processItem(1458242);
    }
    else
    {
        _ = handleOddItem(53878);
    }
}